# py-selenium-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
config/: config_template.yml  ics_template.ics
docs/: additional_instructions.md  formato_ics.md
src/: __init__.py  main.py
src/common/base/: base_class.py
src/common/errors/: errors.py
src/config/: constants.py
src/config/files/: settings_template.yaml
src/core/: __init__.py  common.py  constypes.py  debug.py  utils.py
src/infrastructure/: logger.py
src/pipeline/: __init__.py  selenium_scraper_pipeline.py
tools/: commit.txt
